--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -86,6 +86,13 @@
   display: flex;
   gap: 15px;
 }
+.main .left .all-data .data-box i {
+  width: 20px;
+}
+.main .left .all-data .data-box div {
+  display: flex;
+  gap: 17px;
+}
 .main .left .all-data .data-box .loader-img {
   width: 25px;
   animation: rotation 1.5s infinite linear;
